# yolo-pose-cpp

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml
include/: input_handler.hpp  model_types.hpp  onnx_engine.hpp  pipeline.hpp  preprocess_letterbox.hpp  visualize_results.hpp  yolo_pose_postprocess.hpp
scripts/: export_yolo_pose_onnx.py
src/: input_handler.cpp  main.cpp  onnx_engine.cpp  pipeline.cpp  preprocess_letterbox.cpp  visualize_results.cpp  yolo_pose_postprocess.cpp
